# dialexis

./: .gitignore  Dockerfile  README-NINIKO.md  bot.py  create_secrets.py  env.example  hotel_ai_receptionist_plan.md  inspect_runner.py  pcc-deploy.toml  probe_server.py  pyproject.toml
data/: hotel_config.yaml
docs/: CALENDAR-FUNCTIONS.md  GOOGLE-CALENDAR-SETUP.md  HOSTING-DEPLOYMENT.md  HOTEL_README.md  IMPLEMENTATION.md  NATURAL-FUNCTION-CALLING.md  PERFORMANCE-METRICS.md  PRD-NINIKO.md  PRICING-ANALYSIS.md  TELEPHONY-RESEARCH-PROMPT.md  USER-IDENTIFICATION.md
docs/implementation/: CALENDAR-INTEGRATION-COMPLETE.md  CURRENT-PERFORMANCE-ANALYSIS.md  IMPLEMENTATION-2.1-COMPLETE.md
hotel-ai-web/: README.md  client.js  index.html
prompts/: dental-secretary-condensed.yaml  dental-secretary.yaml  elder-help.yaml  hotel-receptionist.yaml
scripts/: analyze_metrics.py  install-calendar.ps1
src/: __init__.py  config.py
src/calendar/: calendar_functions.py  google_calendar.py
src/database/: models.py  redis_client.py
src/hotel/: __init__.py  hotel_functions.py  hotel_knowledge.py  models.py
src/users/: __init__.py  identification.py
src/utils/: phone_numbers.py
tests/: test_natural_function_calling.py  test_user_identification.py
